# autoresearch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  codeup_cli.py  issue-selector.md  issue09.cast  package-lock.json  program.md  pyproject.toml  run.sh  run_all.sh
.autoresearch/: results.tsv
agents/: claude-mimo.md  claude.md  codex.md  deepseek.md  opencode.md
autoresearch/: __init__.py  cli.py  daemon.py  finalizer.py  gates.py  github.py  issue_generator.py  lease.py  logic.py  models.py  policy.py  progress.py  queue_runner.py  reporting.py  review_schema.py  runner.py  scheduler.py  shell.py  spec_parser.py  tasks.py  telemetry.py  ui.py
desktop_app/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: architecture.html  autoresearch-promo.html  capture_gif.js  desktop-app-prd-to-issues.md  hardness_engineering.md  package-lock.json  secondary-development-plan.md
lib/: CLAUDE.md  agent_logic.sh  branch_cleanup.sh  context.sh  git_push.sh  gitea.sh  linear.sh  progress.sh  prompt.sh  scoring.sh  subtask.sh  ui_verify.sh
tasks/: prd-desktop-app.md
tests/: CLAUDE.md  test_agent_logic.py  test_agent_logic.sh  test_archive.py  test_archive.sh  test_branch_cleanup.sh  test_cleanup.sh  test_context_overflow.py  test_context_overflow.sh  test_continue_dirty.sh  test_continue_diverged.sh  test_daemon.py  test_disk_space.sh  test_extract_score.py  test_extract_score.sh  test_git_error_handling.sh  test_git_push.sh  test_issue_generator.py  test_lease.py  (+10 more)
(+252 files in other folders)
